# Nexlog

./: .dockerignore  .editorconfig  .env.example  .env.gui.example  .env.shared.example  .env.web.example  .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  README.md  SECURITY.md  STARTUP.md  audit_pipeline.py  audit_rules.py  conftest.py  main.py  main_gui.py  main_web.py  pathconfig.py  pyproject.toml  requirements.txt  sitecustomize.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: nexlog.runtime.toml
docs/: RELEASE_GUIDE.md  api-product-strategy.md  changelog.md  enterprise-gap-roadmap.md  quick-setup.md  roadmap.md  security.md  setup.md  web-security.md
docs/archive/legacy-widgets-gui/: README.md  ai_panel.py  attack_graph_view.py  dashboard.py  findings_view.py  glass_widget.py  main_window.py  mitre_heatmap.py  timeline_view.py  tools_panel.py
docs/legal/: privacy.md  terms.md  third-party-notices.md
examples/corpus/: README.md  manifest.yml
interface/: __init__.py
nexlog/ai/: __init__.py  embedder.py  llm_client.py  query_interface.py  rag_engine.py  vector_store.py
nexlog/core/: __init__.py  detector.py  engine.py  models.py  parsers.py  reader.py
nexlog/detection/: __init__.py  attck_tagger.py  entity_risk.py  finding.py  pattern_matcher.py  playbook_engine.py  rule_coverage.py  rule_engine.py  rule_tester.py  sigma_exporter.py  sigma_importer.py  ueba.py
nexlog/detection/rules/: ai_llm_attacks.yaml  api_security.yaml  auth_attacks.yaml  bot_activity.yaml  cloud_container_attacks.yaml  defense_evasion.yaml  discovery.yaml  exfiltration.yaml  impact.yaml  insider_threat.yaml  lateral_movement.yaml  living_off_land.yaml  malware.yaml  network_protocols.yaml  persistence.yaml  privilege_escalation.yaml  recon.yaml  supply_chain.yaml  (+1 more)
nexlog/intelligence/: __init__.py  abuseipdb.py  canary.py  cti_enricher.py  geoip.py  ioc_extractor.py
nexlog/interface/: __init__.py
nexlog/output/: __init__.py  ai_report.py  attack_graph.py  case_bundle.py  ioc_csv.py  pdf_report.py  report_builder.py  stix_export.py
nexlog/storage/: __init__.py  case_db.py  chain_of_custody.py  hunt.py
nexlog/utils/: ip_utils.py  runtime_config.py  timestamps.py
packaging/: Dockerfile  docker-compose.yml
packaging/inno/: README.md  nexlog.iss
packaging/pyinstaller/: NexLog.spec  nexlog.spec  rthook_nexlog.py
scripts/: case_bundle.py  clean_project.py  coverage_report.py  generate_api_key.py  hunt.py  launch_check.py  package_release.py  parser_corpus_check.py  release_check.py  rule_test.py  scale_fonts.py  sigma_import.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_ai.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer3_enhancements.py  test_layer4.py  test_layer5_gui.py  test_layer5_web.py  test_security.py
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  main.tsx  styles.css
(+36 files in other folders)
